--- a/index.html
+++ b/index.html
@@ -398,79 +398,129 @@
             <!-- contact us container -->
             <div class="my-3 md:my-20 text-center">
                 <!-- heading & description -->
-                <h2 class="text-4xl font-extrabold font-eb-garamond text-[#414040] mb-4 text-center">Contact With Us</h2>
+                <h2 class="text-4xl font-extrabold font-eb-garamond text-[#414040] mb-4 text-center">Contact With Us
+                </h2>
                 <p class="text-base text-secondary-color font-poppins lg:w-[700px] lg:m-auto">
-                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour.
                 </p>
-                
+
                 <div class="flex flex-col lg:flex-row mt-12 items-center">
                     <!-- contact cards-->
-                <div class="grid gap-5 grid-cols-1 lg:grid-cols-2 flex-1">
-                    <!-- card 1 -->
-                    <div class="card bg-[#efe9e9]">
-                        <figure class="px-10 pt-10">
-                          <img src="./images/icons/location.png" alt="" class="rounded-xl" />
-                        </figure>
-                        <div class="card-body items-center text-center">
-                          <h4 class="card-title lg:text-2xl text-[#414040] font-extrabold font-eb-garamond ">Address</h4>
-                          <p class="lg:text-base font-poppins text-secondary-color">A108 Adam Street, <br>
-                            New York, NY 535022</p>
+                    <div class="grid gap-5 grid-cols-1 lg:grid-cols-2 flex-1">
+                        <!-- card 1 -->
+                        <div class="card bg-[#efe9e9]">
+                            <figure class="px-10 pt-10">
+                                <img src="./images/icons/location.png" alt="" class="rounded-xl" />
+                            </figure>
+                            <div class="card-body items-center text-center">
+                                <h4 class="card-title lg:text-2xl text-[#414040] font-extrabold font-eb-garamond ">
+                                    Address</h4>
+                                <p class="lg:text-base font-poppins text-secondary-color">A108 Adam Street, <br>
+                                    New York, NY 535022</p>
+                            </div>
                         </div>
-                      </div>
-                    <!-- card 2 -->
-                    <div class="card bg-[#efe9e9]">
-                        <figure class="px-10 pt-10">
-                          <img src="./images/icons/call.png" alt="" class="rounded-xl" />
-                        </figure>
-                        <div class="card-body items-center text-center">
-                          <h4 class="card-title lg:text-2xl text-[#414040] font-extrabold font-eb-garamond ">Address</h4>
-                          <p class="lg:text-base font-poppins text-secondary-color">A108 Adam Street, <br>
-                            New York, NY 535022</p>
+                        <!-- card 2 -->
+                        <div class="card bg-[#efe9e9]">
+                            <figure class="px-10 pt-10">
+                                <img src="./images/icons/call.png" alt="" class="rounded-xl" />
+                            </figure>
+                            <div class="card-body items-center text-center">
+                                <h4 class="card-title lg:text-2xl text-[#414040] font-extrabold font-eb-garamond ">
+                                    Address</h4>
+                                <p class="lg:text-base font-poppins text-secondary-color">A108 Adam Street, <br>
+                                    New York, NY 535022</p>
+                            </div>
                         </div>
-                      </div>
-                    <!-- card 3 -->
-                    <div class="card bg-[#efe9e9]">
-                        <figure class="px-10 pt-10">
-                          <img src="./images/icons/email.png" alt="" class="rounded-xl" />
-                        </figure>
-                        <div class="card-body items-center text-center">
-                          <h4 class="card-title lg:text-2xl text-[#414040] font-extrabold font-eb-garamond ">Address</h4>
-                          <p class="lg:text-base font-poppins text-secondary-color">A108 Adam Street, <br>
-                            New York, NY 535022</p>
+                        <!-- card 3 -->
+                        <div class="card bg-[#efe9e9]">
+                            <figure class="px-10 pt-10">
+                                <img src="./images/icons/email.png" alt="" class="rounded-xl" />
+                            </figure>
+                            <div class="card-body items-center text-center">
+                                <h4 class="card-title lg:text-2xl text-[#414040] font-extrabold font-eb-garamond ">
+                                    Address</h4>
+                                <p class="lg:text-base font-poppins text-secondary-color">A108 Adam Street, <br>
+                                    New York, NY 535022</p>
+                            </div>
                         </div>
-                      </div>
-                    <!-- card 4 -->
-                    <div class="card bg-[#efe9e9]">
-                        <figure class="px-10 pt-10">
-                          <img src="./images/icons/time.png" alt="" class="rounded-xl" />
-                        </figure>
-                        <div class="card-body items-center text-center">
-                          <h4 class="card-title lg:text-2xl text-[#414040] font-extrabold font-eb-garamond ">Address</h4>
-                          <p class="lg:text-base font-poppins text-secondary-color">A108 Adam Street, <br>
-                            New York, NY 535022</p>
+                        <!-- card 4 -->
+                        <div class="card bg-[#efe9e9]">
+                            <figure class="px-10 pt-10">
+                                <img src="./images/icons/time.png" alt="" class="rounded-xl" />
+                            </figure>
+                            <div class="card-body items-center text-center">
+                                <h4 class="card-title lg:text-2xl text-[#414040] font-extrabold font-eb-garamond ">
+                                    Address</h4>
+                                <p class="lg:text-base font-poppins text-secondary-color">A108 Adam Street, <br>
+                                    New York, NY 535022</p>
+                            </div>
                         </div>
-                      </div>
 
-                </div>
-                <!-- contact form -->
-                <div class="flex-1">
-                    <form action="#">
-                        <input class="text-base border-none outline-none text-secondary-color font-poppins lg:w-[500px] rounded-lg bg-[#F3F3F3] p-5 mb-3 mt-3 " type="text" placeholder="Your Name"> <br>
-                        <input class="text-base border-none outline-none text-secondary-color font-poppins lg:w-[500px] rounded-lg bg-[#F3F3F3] p-5 mb-3 " type="email" placeholder="Your Email"> <br>
-                        <input class="text-base border-none outline-none text-secondary-color font-poppins lg:w-[500px] rounded-lg bg-[#F3F3F3] p-5 mb-3 " type="text" placeholder="Subject"> <br>
-                        <textarea class="text-base border-none outline-none text-secondary-color lg:w-[500px] font-poppins rounded-lg bg-[#F3F3F3] p-5 mb-3 " name="" id="" cols="25" rows="3" placeholder="Your Message" ></textarea> <br>
-                        <input class="btn rounded-lg bg-primary-color lg:w-[500px] md:text-lg text-white font-semibold font-poppins capitalize" type="submit" value="Send Message"> <br>
+                    </div>
+                    <!-- contact form -->
+                    <div class="flex-1">
+                        <form action="#">
+                            <input
+                                class="text-base border-none outline-none text-secondary-color font-poppins lg:w-[500px] rounded-lg bg-[#F3F3F3] p-5 mb-3 mt-3 "
+                                type="text" placeholder="Your Name"> <br>
+                            <input
+                                class="text-base border-none outline-none text-secondary-color font-poppins lg:w-[500px] rounded-lg bg-[#F3F3F3] p-5 mb-3 "
+                                type="email" placeholder="Your Email"> <br>
+                            <input
+                                class="text-base border-none outline-none text-secondary-color font-poppins lg:w-[500px] rounded-lg bg-[#F3F3F3] p-5 mb-3 "
+                                type="text" placeholder="Subject"> <br>
+                            <textarea
+                                class="text-base border-none outline-none text-secondary-color lg:w-[500px] font-poppins rounded-lg bg-[#F3F3F3] p-5 mb-3 "
+                                name="" id="" cols="25" rows="3" placeholder="Your Message"></textarea> <br>
+                            <input
+                                class="btn rounded-lg bg-primary-color lg:w-[500px] md:text-lg text-white font-semibold font-poppins capitalize"
+                                type="submit" value="Send Message"> <br>
 
-                    </form>
+                        </form>
 
-                </div>
+                    </div>
                 </div>
             </div>
         </section>
         <!-- contact us sections ends here -->
-        
     </main>
-    <footer>
+    <footer class="bg-black">
+
+        <div class="footer p-10 text-base-content max-w-7xl m-auto text-center text-white">
+            <div>
+                <span class="footer-title">Services</span>
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+            </div>
+            <div>
+                <span class="footer-title">Company</span>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+            </div>
+            <div>
+                <span class="footer-title">Legal</span>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+            </div>
+            <div>
+                <span class="footer-title">Newsletter</span>
+                <div class="form-control w-80">
+                    <label class="label">
+                        <span class="label-text text-white">Enter your email address</span>
+                    </label>
+                    <div class="relative">
+                        <input type="text" placeholder="username@site.com" class="input input-bordered w-full pr-16" />
+                        <button class="btn bg-primary-color absolute top-0 right-0 rounded-l-none">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </footer>
 </body>
